# wind

./: CONTRIBUTING.md  Cargo.toml  LICENSE
core/: Cargo.toml
core/src/: application.rs  cli.rs  lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  cli.rs  lib.rs  main.rs  painter.rs
crates/view/: Cargo.toml
crates/view/src/: boundaries.rs  document.rs  editor.rs  lib.rs  painter.rs  position.rs  terminal.rs
