[workspace]
members = [
    "core",
    "crates/*"
]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.27", features = ["event-stream"] }
futures-util = "0.3"
ratatui = { version = "0.23", features = ["all-widgets"] }
tokio = { version = "1", features = ["full"] }
