[package]
name = "wind_core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wind"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
futures-util = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }

wind_view = { path = "../view" }
